Se hicieron mas correcciones, pero el editar aun no funciona

--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/acerca-de/acerca-de.component.html
@@ -17,7 +17,7 @@
          <div class="flex-grow-1 ms-3">
                <br>
                <br>
-               <button type="submit" class="btn btn-close-white btn-sm, botonAdd">
+               <button type="submit" class="btn btn-close-white btn-sm, botonAdd" routerLink="/editAcercaDe/{{persona.id}}">
                   <img class="botonEfecto"
                   src="../assets/edit.png"
                   id="editar" >
