--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/add-educacion/add-educacion.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/add-educacion/add-educacion.component.html
@@ -2,7 +2,7 @@
     <div class="contenedor">
         <div class="d-flex p-2 bd-highlight">
             <div class="flex-shrink-0">
-                <form>
+                <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
                     <div class="mb-3">
                         <label class="form-label">
                             <h1>Agregue un estudio mas</h1>
@@ -15,7 +15,7 @@
                                     <h5>Institución</h5>
                                 </label>
                                 <input class="form-control form-control-sm" type="text" id="institucionAdd"
-                                    name="institucion" [(ngModel)]="instiAdd" required
+                                    name="institucion" [(ngModel)]="institucion" required
                                     placeholder="Nombre de la institucion" aria-label=".form-control-sm example">
                             </div>
                         </div>
@@ -25,7 +25,7 @@
                                     <h5>Carrera/Curso</h5>
                                 </label>
                                 <input class="form-control form-control-sm" type="text" id="titulacionAdd"
-                                    name="titulacionAdd" [(ngModel)]="titulAdd" required
+                                    name="titulacionAdd" [(ngModel)]="titulacion" required
                                     placeholder="Nombre de la carrera o curso" aria-label=".form-control-sm example">
                             </div>
                         </div>
@@ -35,7 +35,7 @@
                                     <h5>Desde</h5>
                                 </label>
                                 <input class="form-control form-control-sm" type="text" id="inicio_eduAdd"
-                                    name="inicio_eduAdd" [(ngModel)]="inicioEduAdd" required placeholder="Inicio"
+                                    name="inicio_eduAdd" [(ngModel)]="inicio_edu" required placeholder="Inicio"
                                     aria-label=".form-control-sm example">
                             </div>
 
@@ -46,7 +46,7 @@
                                     <h5>Hasta</h5>
                                 </label>
                                 <input class="form-control form-control-sm" type="text" id="fin_eduAdd"
-                                    name="fin_eduAdd" [(ngModel)]="finEduAdd" required placeholder="Hasta"
+                                    name="fin_eduAdd" [(ngModel)]="fin_edu" required placeholder="Hasta"
                                     aria-label=".form-control-sm example">
                             </div>
                         </div>
@@ -56,14 +56,14 @@
                                     <h5>Descripción</h5>
                                 </label>
                                 <textarea class="form-control form-control-sm" type="text" id="descripcion_eduAdd"
-                                    name="descripcion_eduAdd" [(ngModel)]="descripcionEduAdd" required
+                                    name="descripcion_eduAdd" [(ngModel)]="descripcion_edu" required
                                     placeholder=" Descripcion carrera o curso" aria-label="With textarea"></textarea>
                             </div>
                         </div>
                         <!--Boton de guardado-->
                         <div class="col-10 order-first">
-                            <div class="mb-3 float-right">
-                                <button type="button" class="btn btn-dark btn-sm">Agregar educacion</button>
+                            <div class="mb-3 float-right d-flex justify-content-end">
+                                <button type="submit" class="btn btn-dark btn-sm">Agregar educacion</button>
                             </div>
                         </div>
                     </div>
