--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/add-experiencia/add-experiencia.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/add-experiencia/add-experiencia.component.html
@@ -2,73 +2,72 @@
     <div class="contenedor">
         <div class="d-flex p-2 bd-highlight">
             <div class="flex-shrink-0">
-                <form>
+                <form  (ngSubmit)="onCreate()" novalidate #f="ngForm">
                     <div class="mb-3">
                         <label class="form-label">
                             <h1>Agregue una experiencia mas</h1>
                         </label>
                     </div>
-
                     <div class="row">
-                        <div class="col-12 order-first">
+                        <div class="col-10 order-first">
                             <div class="mb-3">
                                 <label for="formFileSm" class="form-label">
-                                    <h5>Puesto</h5>
+                                    <h5>Empresa&nbsp;&nbsp;&nbsp;&nbsp;</h5>
                                 </label>
-                                <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
-                                    aria-label=".form-control-sm example">
+                                <input type="text" class="form-control form-control-sm" id="empresa" name="empresa"
+                                [(ngModel)]="empresa" required placeholder="Empresa">
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-12 order-first">
+                        <div class="col-10 order-first">
                             <div class="mb-3">
                                 <label for="formFileSm" class="form-label">
-                                    <h5>Desde</h5>
+                                    <h5>Puesto&nbsp;&nbsp;&nbsp;&nbsp;</h5>
                                 </label>
-                                <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
-                                    aria-label=".form-control-sm example">
+                                <input type="text" class="form-control form-control-sm" id="puesto" name="puesto"
+                                placeholder="Puesto" [(ngModel)]="puesto" required>
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-12 order-first">
+                        <div class="col-10 order-first">
                             <div class="mb-3">
                                 <label for="formFileSm" class="form-label">
-                                    <h5>Hasta</h5>
+                                    <h5>Desde&nbsp;&nbsp;&nbsp;&nbsp;</h5>
                                 </label>
-                                <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
-                                    aria-label=".form-control-sm example">
+                                <input class="form-control form-control-sm" type="text"  id="incio_exp" name="incio_exp"
+                                placeholder="Desde" [(ngModel)]="inicio_exp" required>
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-12 order-first">
+                        <div class="col-10 order-first">
                             <div class="mb-3">
                                 <label for="formFileSm" class="form-label">
-                                    <h5>Estado actual</h5>
+                                    <h5>Hasta&nbsp;&nbsp;&nbsp;&nbsp;</h5>
                                 </label>
-                                <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
-                                    aria-label=".form-control-sm example">
+                                <input class="form-control form-control-sm" type="text" id="fin_exp" name="fin_exp"
+                                placeholder="Hasta" aria-label=".form-control-sm example"
+                                [(ngModel)]="fin_exp" required>
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-12 order-first">
+                        <div class="col-10 order-first">
                             <div class="mb-3">
                                 <label for="formFileSm" class="form-label">
-                                    <h5>Descripción</h5>
+                                    <h5>Descripción&nbsp;&nbsp;&nbsp;&nbsp;</h5>
                                 </label>
-                                <textarea class="form-control form-control-sm" type="text"
-                                    placeholder=".form-control-sm" aria-label="With textarea"></textarea>
+                                <textarea class="form-control form-control-sm" type="text" id="descripcion_exp" name="descripcion_exp"
+                                placeholder="Descripción" aria-label="With textarea"
+                                [(ngModel)]="descripcion_exp" required></textarea>
                             </div>
                         </div>
                     </div>
-                    <div class="row d-flex">
-                        <div class="col-12 d-flex justify-content-end">
-                            <div class="mb-3 float-right">
-                                <button type="button" class="btn btn-dark btn-sm">Agregar experiencia</button>
-                            </div>
+                    <div class="col-10 order-first">
+                        <div class="mb-3 float-right d-flex justify-content-end">
+                                <button type="submit" class="btn btn-dark btn-sm">Agregar experiencia</button>
                         </div>
                     </div>
                 </form>
